# teachermate.ai

./: .gitignore  README.md  docker-compose.yml
server/: .env.example  Dockerfile  main.py  pyproject.toml
server/database/: schema.py
