[project]
name = "server"
version = "0.1.0"
description = "FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "httpx>=0.26.0", "ruff>=0.1.0"]
